<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.epicodus.madlibs.WordsOneActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter some words!"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:textSize="20dp"
        android:id="@+id/madLibsTextView" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Get Started!"
        android:id="@+id/startButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/verbEditText1"
        android:layout_below="@+id/madLibsTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="46dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="26dp"
        android:layout_alignRight="@+id/madLibsTextView"
        android:layout_alignEnd="@+id/madLibsTextView"
        android:hint="Enter an adjective"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/verbEditText2"
        android:layout_marginTop="31dp"
        android:hint="Enter an adjective"
        android:layout_below="@+id/verbEditText1"
        android:layout_alignLeft="@+id/verbEditText1"
        android:layout_alignStart="@+id/verbEditText1"
        android:layout_alignRight="@+id/madLibsTextView"
        android:layout_alignEnd="@+id/madLibsTextView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nounEditText1"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/verbEditText2"
        android:layout_alignEnd="@+id/verbEditText2"
        android:layout_alignLeft="@+id/verbEditText2"
        android:layout_alignStart="@+id/verbEditText2"
        android:hint="Enter a noun"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nounEditText2"
        android:layout_below="@+id/nounEditText1"
        android:layout_alignLeft="@+id/nounEditText1"
        android:layout_alignStart="@+id/nounEditText1"
        android:layout_marginTop="42dp"
        android:layout_alignRight="@+id/nounEditText1"
        android:layout_alignEnd="@+id/nounEditText1"
        android:hint="Enter a noun"/>

</RelativeLayout>
